fix alignment issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,9 @@ Courses Style
     box-shadow: 0px 5.34229px 13.3557px rgba(0, 0, 0, 0.05);
     border-radius: 15px;
 }
+.course-banner{
+    text-align: center;
+}
 .course-banner img{
     width: 224px;
     height: 124px;
